--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-06-28  Ajay Saini  <sainiak@uci.edu>
+
+	* Add global attribute JAWS
+	
+	* Define common version variable in common.py
+
+	* Rename version as jaws_version
+
+	* git tag -a 0.4.3 -m 'alpha03: Add global attribute JAWS, jaws_version made global variable'; git push --tags
+
 2018-06-27  Ajay Saini  <sainiak@uci.edu>
 
 	* Update installation instructions
