--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2018-06-28  Ajay Saini  <sainiak@uci.edu>
 
+	* Use regular expression to identify separator for input data
+
+	* git tag -a 0.4.4 -m 'beta01: Regex to identify separator for input data'; git push --tags
+
+2018-06-28  Ajay Saini  <sainiak@uci.edu>
+
 	* Add global attribute JAWS
 	
 	* Define common version variable in common.py
