--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-07-10  Ajay Saini  <sainiak@uci.edu>
+
+	* Update all 'ds.json' files' structure according to nco-json format
+
+	* Update function to write metadata from ds.json
+
+	* Correct import for jaws_version in jaws.py
+
+	* git tag -a 0.4.6 -m 'beta03: Switch to NCO-json'; git push --tags
+
 2018-07-09  Ajay Saini  <sainiak@uci.edu>
 
 	* Change '--drv_tm' to '--no_drv_tm', by default included in output file
