--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-07-23  Ajay Saini  <sainiak@uci.edu>
+
+	* Work on making JAWS compatible with different columns than standard
+
 2018-07-15  Ajay Saini  <sainiak@uci.edu>
 
 	* Add benchmark for Summit station on homepage
