--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2018-07-23  Ajay Saini  <sainiak@uci.edu>
 
+	* AAWS, PROMICE files can be converted with different columns than standard
+
+	* In progress for GCNet
+
+2018-07-23  Ajay Saini  <sainiak@uci.edu>
+
 	* Work on making JAWS compatible with different columns than standard
 
 2018-07-15  Ajay Saini  <sainiak@uci.edu>
