--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-10-09  Ajay Saini  <sainiak@uci.edu>
+
+	* include jaws/resources/scar/* in MANIFEST.in
+
+	* Update homepage
+
 2018-10-08  Ajay Saini  <sainiak@uci.edu>
 
 	* Script to convert SCAR datasets to netCDF format
