--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-03-13  Ajay Saini  <sainiak@uci.edu>
+
+	* CERES: different variable name for AIRS and MERRA
+
+	* PROMICE: Add new vars Sensible Heat Flux and Latent Heat Flux
+
 2019-03-12  Ajay Saini  <sainiak@uci.edu>
 
 	* tilt_angle.py: Correction in heartbeat message'
