--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2019-03-20  Ajay Saini  <sainiak@uci.edu>
+
+	* Debug windows running issue
+
+	* Debug incorrect fsds_adjusted for multi-year data
+
+2019-03-19  Ajay Saini  <sainiak@uci.edu>
+
+	* Debug windows running issue
+
+	* Debug incorrect fsds_adjusted for multi-year data
+
+	* Documentation
+
+2019-03-18  Ajay Saini  <sainiak@uci.edu>
+
+	* Debug incorrect fsds_adjusted for multi-year data
+
 2019-03-15  Ajay Saini  <sainiak@uci.edu>
 
 	* tilt_angle.py, fsds_adjust.py: Exception if no internet connection to download files
