Update analysis instructions in README

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-04-02  Ajay Saini  <sainiak@uci.edu>
+
+	* Update instructions for analysis
+
 2019-04-01  Ajay Saini  <sainiak@uci.edu>
 
 	* fsds_adjust.py: Rearrange order of equations in post-processing
