README.md: Move station info on top

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-04-08  Ajay Saini  <sainiak@uci.edu>
+
+	* Heat Fluxes for GCNet
+
+	* Documentation
+
 2019-04-04  Ajay Saini  <sainiak@uci.edu>
 
 	* CMIP names for variables across all networks
