docs: Add usage for Optional Arguments

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-04-10  Ajay Saini  <sainiak@uci.edu>
+
+	* Add usage for Optional Arguments
+
+2019-04-09  Ajay Saini  <sainiak@uci.edu>
+
+	* Heat Fluxes for GCNet
+
 2019-04-08  Ajay Saini  <sainiak@uci.edu>
 
 	* Heat Fluxes for GCNet
