--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-05-15  Ajay Saini  <sainiak@uci.edu>
+
+    * Add --hPa option to convert pressure units
+
+2019-05-14  Ajay Saini  <sainiak@uci.edu>
+
+    * Streamline Appveyor testing
+
 2019-05-13  Ajay Saini  <sainiak@uci.edu>
 
     * jaws.py: Change method to detect POLENET and SCAR files
