--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-05-17  Ajay Saini  <sainiak@uci.edu>
+
+    * Debug IMAU files
+
 2019-05-16  Ajay Saini  <sainiak@uci.edu>
 
     * Debug IMAU files
