--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-05-23  Ajay Saini  <sainiak@uci.edu>
+
+    * Work on PROMICE monthly input files
+
 2019-05-17  Ajay Saini  <sainiak@uci.edu>
 
     * Debug IMAU files
