--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-08-13  Ajay Saini  <sainiak@uci.edu>
+
+    * Include jaws/resources/nsidc/* in MANIFEST.in
+
+    * git tag -a 0.9.2 -m 'alpha02: Add NSIDC files to MANIFEST.in'; git push --tags
+
 2019-08-11  Ajay Saini  <sainiak@uci.edu>
 
     * git tag -a 0.9.1 -m 'alpha01: Add new network NSIDC'; git push --tags
