--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2019-08-13  Ajay Saini  <sainiak@uci.edu>
 
+    * nsidc: Calculate time as 'seconds since 1900-01-01' for files having starting year prior to 1970
+
+    * nsidc2nc: Divide variables by 10 having scaling factor of 10
+
+    * common.py: Check if network is "nsidc" before updating time units
+
+    * git tag -a 0.9.3 -m 'alpha03: Correct time for NSIDC files prior to 1970'; git push --tags
+
+2019-08-13  Ajay Saini  <sainiak@uci.edu>
+
     * Include jaws/resources/nsidc/* in MANIFEST.in
 
     * git tag -a 0.9.2 -m 'alpha02: Add NSIDC files to MANIFEST.in'; git push --tags
